salesforce-main/src/main/default/objects/CBA__c/CBA__c.object-meta.xml
<CustomObject>
    <description>CBA (Computer Based Assessment) junction object between Product and Instance</description>
    <label>CBA</label>
    <nameField>
        <displayFormat>CBA-{0000000}</displayFormat>
        <label>CBA Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>