salesforce-main/src/main/default/objects/CBA__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>CBA is set to active if both the related product and instance are active</description>
    <formula>IF(  Product__r.IsActive = TRUE &amp;&amp; ISPICKVAL( Instance__r.BPP_Instance_Status__c , &apos;Active&apos; ),
TRUE,
FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>