salesforce-main/src/main/default/objects/CBA__c/fields/CBA_Name__c.field-meta.xml
<CustomField>
    <fullName>CBA_Name__c</fullName>
    <description>Key product / instance info for the CBA</description>
    <formula>Text( Product__r.Qualification__c ) &amp; &quot; - &quot; &amp; TEXT( Product__r.Level_PQ__c ) &amp; &quot; - &quot; &amp; Text( Product__r.Paper__c ) &amp; &quot; - &quot; &amp; Product__r.Course_Type__c &amp; &quot; - &quot; &amp;
Instance__r.Study_Location__r.Name &amp; &quot; - &quot; &amp; Text( Instance__r.Start_Date__c ) &amp; &quot; - &quot; &amp; Text( Instance__r.Session_Duration__c )</formula>
    <label>CBA Name</label>
    <type>Text</type>
</CustomField>