salesforce-main/src/main/default/objects/CBA__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <description>Instance the CBA is representing</description>
    <label>Instance</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This record must be associated with a CBA Instance record</errorMessage>
        <filterItems>
            <field>Instance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CBA Instance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Instance__c</referenceTo>
    <relationshipLabel>CBA Products</relationshipLabel>
    <relationshipName>CBAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>