salesforce-main/src/main/default/objects/CBA__c/fields/Instance_Availability__c.field-meta.xml
<CustomField>
    <fullName>Instance_Availability__c</fullName>
    <description>Current availability of the associated instance</description>
    <formula>Instance__r.Availability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>