salesforce-main/src/main/default/objects/CBA__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product the CBA is representing</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CBA Products</relationshipLabel>
    <relationshipName>CBAs</relationshipName>
    <type>Lookup</type>
</CustomField>