salesforce-main/src/main/default/objects/CBA__c/fields/Product_Factory_Instance_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Factory_Instance_Group_Id__c</fullName>
    <description>Id of the instance group from Product Factory</description>
    <externalId>true</externalId>
    <label>Product Factory Instance Group Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>