salesforce-main/src/main/default/objects/CBA__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <description>Session duration from the related instance (needed for booking filter)</description>
    <formula>TEXT(Instance__r.Session_Duration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Duration</label>
    <type>Text</type>
</CustomField>