salesforce-main/src/main/default/objects/CBA__c/fields/Study_Location__c.field-meta.xml
<CustomField>
    <fullName>Study_Location__c</fullName>
    <description>Study Location from the related instance (needed for booking filter)</description>
    <formula>Instance__r.Study_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Location</label>
    <type>Text</type>
</CustomField>