salesforce-main/src/main/default/objects/CBA__c/validationRules/CBA_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>CBA_Required_Fields</fullName>
    <active>true</active>
    <description>CBA records must have an association with a Product and Instance records</description>
    <errorConditionFormula>ISBLANK( Product__c ) || ISBLANK( Instance__c )</errorConditionFormula>
    <errorMessage>CBA must be associated with a Product and an Instance</errorMessage>
</ValidationRule>